      etc, corresponding to \R's \code{order()}.

      \item C entry points \code{R_qsort} and \code{R_qsort_I} now have
      \code{start} and \code{end} as \code{size_t} to allow them to work
      with longer vectors on 64-bit platforms.  Code using them should
      be recompiled.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Place holder.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{X11()} window gains an icon: the
      latter may be especially useful on Ubuntu's \sQuote{Unity}
      interface.

      The \code{WM_CLASS} should be set in circumstances where the
      Window Manager failed to make use of X11 resource settings.

      (Contributed by Philip Johnson.)

      \item The \code{"Date"} and \code{"POSIXt"} methods for
      \code{cut()} will accept an unsorted \code{breaks} argument (as
      the default method does, although this was undocumented).
      (Wish of \PR{14961}.)

      \item Reference class methods that use other methods in an
      indirect way (e.g., by \code{sapply()}) must tell the code
      analysis to include that method.  They can now do so by invoking
      \code{$usingMethods()}. %$ 

      \item More Polish translations are available: for the
      \command{RGui} menus and for several recommended packages.
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item \code{array()} is now implemented in C code, for speed.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now checks if a package can be loaded
      by \code{library(pkgname, lib.loc = "somewhere")} without being on
      the library search path (unless it is already installed in
      \code{.Library}, when it always will be).
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item Use of \code{array()} with a 0-length \code{dim} argument is